# 0k-sync

./: .dockerignore  .gitignore  .ydun.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  JIMMYS-WORKFLOW.md  LICENSE-APACHE  LICENSE-MIT  NEXT-SESSION-START-HERE.md  README.md  STATUS.md  appendix-b-hybrid-crypto.md  sync-mvp-roadmap.md  sync-relay-spec.md
docs/: 00-PLAN.md  01-EXECUTIVE-SUMMARY.md  02-SPECIFICATION.md  03-IMPLEMENTATION-PLAN.md  04-RESEARCH-VALIDATION.md  05-RELEASE-STRATEGY.md  06-CHAOS-TESTING-STRATEGY.md  07-DISTRIBUTED-TESTING-GUIDE.md  DOCS-MAP.md  E2E-TESTING-GUIDE.md  IROH-AMENDMENTS-PLAN.md  MULTI-RELAY-SPEC.md  WEBSOCKET-REMOVAL-AMENDMENT.md
docs/amendments/: PHASE-RECONCILIATION-EXECUTION-PLAN.md
docs/archive/: 00-PLAN.md  CHAOS-INTEGRATION-AMENDMENTS.md  SYNC-RELAY-ORGANIZATION-PLAN.md
docs/handoffs/: P2-MONEY-Q-0k-sync-implementation-handoff.md
docs/reference/: decentralised-sync-relay-spec.md  hosted-sync-relay-spec.md
docs/research/: iroh-deep-dive-report.md  oprf-passphrase-hardening.md  pq-crypto-shake-mlkem.md  tactical-mesh-profile-appendix-d.md
docs/reviews/: 2026-02-03-sync-relay-phase6-mvp-review.md  2026-02-05-security-audit-report.md  2026-02-05-security-audit-v2-report.md
sync-bridge/: Cargo.toml
sync-bridge/src/: error.rs  handle.rs  lib.rs  types.rs
sync-cli/: Cargo.toml
sync-cli/src/: config.rs  main.rs
sync-cli/src/commands/: init.rs  mod.rs  pair.rs  pull.rs  push.rs  serve.rs  status.rs
sync-client/: Cargo.toml
sync-client/src/: client.rs  crypto.rs  lib.rs  transport.rs
sync-client/src/transport/: iroh.rs  mock.rs  mod.rs
sync-content/: Cargo.toml
sync-content/src/: encrypt.rs  error.rs  lib.rs  store.rs
sync-core/: Cargo.toml
sync-core/src/: buffer.rs  cursor.rs  lib.rs  pairing.rs  state.rs
sync-node/: Cargo.toml  index.d.ts  index.js  package.json
sync-node/__tests__/: client.test.mjs
sync-node/src/: lib.rs
sync-python/: Cargo.toml  pyproject.toml
sync-python/python/zerok_sync/: __init__.py  _zerok_sync.pyi
sync-python/src/: lib.rs
sync-python/tests/: test_client.py
sync-relay/: Cargo.toml  relay.docker.toml  relay.toml.example
sync-relay/src/: cleanup.rs  config.rs  error.rs  lib.rs  limits.rs  main.rs  protocol.rs  server.rs  session.rs
sync-relay/src/http/: health.rs  metrics.rs  mod.rs
sync-relay/src/storage/: mod.rs  schema.sql  sqlite.rs
sync-types/: Cargo.toml
sync-types/src/: envelope.rs  error.rs  ids.rs  lib.rs  messages.rs
tauri-plugin-sync/: Cargo.toml
tauri-plugin-sync/src/: lib.rs
tests/: docker-validate.sh
tests/chaos/: Cargo.toml  Dockerfile.cli  Dockerfile.relay  docker-compose.chaos.yml  docker-compose.distributed.yml
tests/chaos/src/: assertions.rs  harness.rs  lib.rs  netem.rs  pumba.rs  topology.rs  toxiproxy.rs
tests/chaos/src/distributed/: config.rs  harness.rs  mod.rs  ssh.rs
tests/chaos/src/scenarios/: content.rs  distributed.rs  encryption.rs  mod.rs  sync.rs  transport.rs
