[workspace]
resolver = "2"
members = [
    "sync-types",
    "sync-core",
    "sync-client",
    "sync-content",
    "sync-bridge",
    "sync-cli",
    "sync-relay",
    "tauri-plugin-sync",
    "tests/chaos",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ydun-code-library/0k-sync"
authors = ["James Barclay <james@ydun.io>"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

# Error handling
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (PINNED VERSIONS - security critical)
# clatter = "2.2"                # Hybrid Noise Protocol — PLANNED, not yet implemented (see F-002)
chacha20poly1305 = "0.10"        # XChaCha20-Poly1305 with 192-bit nonces
argon2 = "0.5"                   # Key derivation with device-adaptive parameters
zeroize = { version = "1.7", features = ["derive"] }  # Zero memory on drop for key material

# P2P networking
iroh = "0.96"                    # QUIC-based P2P with hole punching
iroh-blobs = "0.98"              # Content-addressed storage with BLAKE3/Bao

# Random number generation
rand = "0.8"
getrandom = "0.2"

# Content key derivation
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"                     # Hash ciphertext for iroh-blobs content address
hex = "0.4"                      # Hex encoding for error messages

# Async utilities
async-trait = "0.1"              # Async trait methods

# Configuration
toml = "0.8"                     # TOML config file parsing

# Concurrent data structures
dashmap = "6"                    # Concurrent HashMap for session tracking

# Chaos testing infrastructure
bollard = "0.16"                 # Docker API client for topology management

# Internal crates (package names use zerok-sync-* prefix for crates.io)
sync-types = { path = "sync-types", package = "zerok-sync-types" }
sync-core = { path = "sync-core", package = "zerok-sync-core" }
sync-client = { path = "sync-client", package = "zerok-sync-client" }
sync-content = { path = "sync-content", package = "zerok-sync-content" }

# Patch for curve25519-dalek digest import fix
# See: https://github.com/dalek-cryptography/curve25519-dalek/pull/878
# Tested 2026-02-05: Still needed. iroh 0.96 pins curve25519-dalek to 5.0.0-pre.1.
# Upstream fixed in pre.2+ (PR #875) but iroh hasn't updated its dependency.
# Remove when iroh updates to use curve25519-dalek >= 5.0.0-pre.2.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/ydun-code-library/curve25519-dalek", branch = "fix/digest-import-5.0.0-pre.1" }
