[package]
name = "zerok-sync-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for testing 0k-Sync protocol"
keywords = ["sync", "cli", "testing"]
categories = ["command-line-utilities"]

[[bin]]
name = "sync-cli"
path = "src/main.rs"

[dependencies]
# Our crates
zerok-sync-client = { path = "../sync-client", package = "zerok-sync-client" }
zerok-sync-core = { path = "../sync-core", package = "zerok-sync-core" }
zerok-sync-types = { path = "../sync-types", package = "zerok-sync-types" }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Serialization for config files
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = { workspace = true }
anyhow = "1"

# Directories
directories = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
