[package]
name = "zerok-sync-content"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Large content transfer for 0k-Sync using iroh-blobs"
keywords = ["sync", "content-addressed", "iroh-blobs", "encryption"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Internal
sync-types = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Crypto
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }

# Utilities
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
