[package]
name = "zerok-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure logic for 0k-Sync (no I/O, instant tests)"
keywords = ["sync", "state-machine", "local-first"]
categories = ["data-structures", "algorithms"]

[dependencies]
# Dependencies will be added in Phase 2
# For now, just a placeholder to allow workspace to compile

[dev-dependencies]
