[package]
name = "zerok-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure logic for 0k-Sync (no I/O, instant tests)"
keywords = ["sync", "state-machine", "local-first"]
categories = ["data-structures", "algorithms"]

[dependencies]
# Wire format types (our foundation)
zerok-sync-types = { path = "../sync-types", package = "zerok-sync-types" }

# Serialization for invite payloads
serde = { workspace = true }
serde_json = { workspace = true }

# Base64 for invite encoding
base64 = "0.22"

# Random for jitter generation (getrandom is sync, not async I/O)
getrandom = "0.2"

# Thiserror for clean error types
thiserror = { workspace = true }

[dev-dependencies]
