[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zerok-sync"
version = "0.1.0"
description = "Zero-knowledge encrypted sync for Python"
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "zerok_sync._zerok_sync"

[tool.pytest.ini_options]
asyncio_mode = "auto"
