[package]
name = "chaos-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Chaos testing harness for 0k-Sync"
publish = false

[dependencies]
sync-types = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Docker management
bollard = { workspace = true }
futures-util = { workspace = true }

# HTTP client for Toxiproxy API
reqwest = { workspace = true }

# Sync client for chaos testing
sync-client = { workspace = true }
sync-core = { workspace = true }

# Unique IDs for test isolation
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

# Temp directories for distributed test state
tempfile = "3"

[dev-dependencies]
